--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,78 @@
  *= require_tree .
  *= require_self
  */
-
+html, main{
+  padding: 0px 0px;
+  margin: 0px;
+}
 
 .login-form-container {
-  margin: auto;
+  margin: 0px;
+  width: 100%;
+  height: 530px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: 18px;
+  color: #333;
+  font-family: Helvetica;
+  background-color: #F3F3F3;
+  padding-top: 40px;
+}
+
+.login-form-title {
+  font-weight: 500;
+}
+
+.login-divider {
+  border-bottom: 2px dotted lightgray;
+  width: 650px;
+  height: 2px;
+  margin-top: 36px;
+  margin-bottom: 28px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.login-form-box {
+  width: 100%;
+  padding-top: 0px;
+
+
+}
+
+.login-form {
+
+}
+
+.item {
+
+}
+
+.login-form label{
+  position: relative;
+  text-align: center;
+  font-weight: 300;
+  font-size: 16px;
+  padding-right: 15px;
+
+}
+
+.login-input {
+  padding: 0px;
+  width: 300px;
+  height: 35px;
+  display: inline-block;
+  border: 1px solid lightgray;
+  box-sizing: border-box;
+
+}
+
+.session-submit {
+  width: 300px;
+  height: 35px;
+  background-color: #1390B9;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
 }
