--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -3,6 +3,11 @@
   	window.currentUser = <%= render("api/users/user.json.jbuilder",
   		user: current_user).html_safe %>
   <% end %>
+  window.bill = "<%= asset_path('billfrisell.jpg')%>"
+  window.chris = "<%= asset_path('Chris-Speed.jpg')%>"
+  window.charlie = "<%= asset_path('charlie-haden.jpg')%>"
+  window.dewey = "<%= asset_path('Dewey-redman-sw2.jpg')%>"
+  window.bc = "<%= asset_path('bandcamp.png')%>"
 </script>
 
 
