--- a/app/assets/stylesheets/artist/edit_artist.css
+++ b/app/assets/stylesheets/artist/edit_artist.css
@@ -4,7 +4,68 @@
 
 .edit-artist-background {
   width: 975px;
-  height: auto;
+  height: 1000px;
   background-color: white;
   margin: auto;
+}
+
+
+.edit-artist-content {
+  padding-top: 56px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 45px;
+}
+
+.edit-artist-heading {
+
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 26px;
+}
+
+.edit-artist-label-inputs {
+  display: flex;
+
+}
+
+.edit-artist-labels {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 175px;
+  text-align: right;
+  color: dimgray;
+  font-size: 13px;
+  margin-right: 10px;
+}
+
+.edit-artist-inputs {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 175px;
+}
+
+.edit-artist-input {
+  width: 369px;
+  height: 23px;
+  font-size: 14px;
+  padding-left: 3px;
+  outline: none;
+}
+
+.edit-artist-submit {
+  margin-top: 30px;
+  border: 1px solid silver;
+  width: 81px;
+  height: 31px;
+  font-size: 18px;
+  color: #0687f5;
+  outline: none;
+}
+
+.edit-artist-submit:hover {
+  text-decoration: underline;
+
 }
