Finish upload and start player

--- a/app/assets/stylesheets/artist/artist_main.css
+++ b/app/assets/stylesheets/artist/artist_main.css
@@ -80,9 +80,10 @@
 .player {
   width: 376px;
   height: 52px;
-  background-color: white;
+  /* background-color: white; */
   margin-top: 24px;
   margin-bottom: 17px;
+
 }
 
 .digital-album {
