--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -8,6 +8,8 @@
   window.charlie = "<%= asset_path('charlie-haden.jpg')%>"
   window.dewey = "<%= asset_path('Dewey-redman-sw2.jpg')%>"
   window.bc = "<%= asset_path('bandcamp.png')%>"
+  window.play = "<%= asset_path('play.jpg')%>"
+  window.pause = "<%= asset_path('pause.jpg')%>"
 </script>
 
 
