--- a/app/assets/stylesheets/player/player.css
+++ b/app/assets/stylesheets/player/player.css
@@ -1,3 +1,9 @@
+
+.player-total {
+  display:flex;
+}
+
+
 .native-player audio {
   display: none;
   z-index: 4;
@@ -10,7 +16,7 @@
   z-index: 3;
 }
 
-.play > img{
+.play > img {
   height: 20px;
   width: 20px;
   position: relative;
@@ -20,20 +26,52 @@
 
 }
 
-.pause > img {
+.player-mid-controls {
+  margin-left: 12px;
+}
+
+.slider-container {
+  width: 250px;
+}
+
+.current-track-title {
   height: 20px;
-  width: 20px;
-  position: relative;
-  bottom: 8px;
-  left: 18px;
-  z-index: 1;
+  font-size: 13px;
+  color: #363636;
+  font-weight: 500;
+  margin-top: 10px;
+}
+
+.current-track-title:hover {
+  text-decoration: underline;
+}
+
+.slider {
+
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 8px;
+  border: 1px solid darkgray;
+  background-color: #9c9c9ca3;
+  outline: none;
 
 }
 
-.play.off > img {
-  display: none;
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 27px; /* Set a specific slider handle width */
+    height: 15px; /* Slider handle height */
+    background-color: white; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+    border: 1px solid darkgray;
 }
 
-.pause.off > img {
-  display: none;
+.slider::-moz-range-thumb {
+    width: 27px; /* Set a specific slider handle width */
+    height: 15px; /* Slider handle height */
+    background-color: white; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+    border: 1px solid darkgray;
 }
