fix front page and start search bar

--- a/app/assets/stylesheets/main/main_nav.css
+++ b/app/assets/stylesheets/main/main_nav.css
@@ -99,7 +99,26 @@
 }
 
 .main-nav-right-top {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 13px;
+}
 
+.artist-search-bar {
+  width: 208px;
+  height: 26px;
+  border: 1px solid #bebebe;
+  border-radius: 3px;
+  outline: none;
+  padding-left: 10px;
+  padding-right: 28px;
+  color: #161113;
+  font-size: 13px;
+}
+
+.artist-search-bar:focus {
+  background: #eef2f3;
+  box-shadow: 0 0 5px #d7d7d7
 }
 
 .main-nav-right-bottom {
