--- a/app/assets/stylesheets/main/search_bar.css
+++ b/app/assets/stylesheets/main/search_bar.css
@@ -64,22 +64,26 @@
 
 .search-content-box {
   padding-left: 6px;
+  vertical-align: top;
 }
 
 .search-album-title {
+  vertical-align: top;
   font-size: 11px;
   font-weight: 700;
   line-height: 14px;
 }
 
 .search-album-artist {
+  vertical-align: top;
   font-size: 11px;
-  line-height: 13px;
+  line-height: 14px;
 
 }
 
 .search-album-type {
+  vertical-align: top;
   font-size: 11px;
-  line-height: 13px;
+  line-height: 14px;
 
 }
