--- a/app/assets/stylesheets/artist/artist_nav.css
+++ b/app/assets/stylesheets/artist/artist_nav.css
@@ -11,6 +11,7 @@
   width: 975px;
   margin: 0 auto;
   display: flex;
+
 }
 
 .artist-nav-logo {
@@ -71,5 +72,73 @@
   padding-right: 21px;
   border: 1px solid #e0e0e0;
   background-color: #e0e0e0;
+
+}
+
+.artist-nav-search ul {
+  margin-top: -11px;
+}
+
+.artist-nav-search input:focus {
+  background-color: #eef2f3;
+  border: 1px solid #bebebe
+
+}
+
+.artist-nav-right {
+
+  left: 373px;
+  position: relative;
+}
+
+.artist-nav-session-buttons {
+  display: flex;
+  list-style: none;
+  width: 193px;
+
+
+}
+
+.artist-nav-right-link {
+  height: 43px;
+  padding-right: 10px;
+  padding-left: 10px;
+  color: #1DA0C3;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 43px;
+
+}
+
+.artist-nav-right-link:hover {
+  color: #777272 !important;
+  background-color: #ded8d8;
+
+}
+
+.artist-nav-right-link a{
+  color: #1DA0C3 !important;
+  text-decoration: none;
+}
+.artist-nav-right-link a:link {
+  color: #1DA0C3 !important;
+  text-decoration: none;
+}
+
+.artist-nav-right-link a:active {
+  color: white !important;
+  text-decoration: none;
+}
+
+.artist-nav-right-link a:hover {
+  color: #777272 !important;
+  text-decoration: none;
+
+}
+
+}
+.artist-nav-right-link a:visited {
+  color: #1DA0C3 !important;
+  text-decoration: none;
 
 }
