--- a/app/assets/stylesheets/artist/artist_nav.css
+++ b/app/assets/stylesheets/artist/artist_nav.css
@@ -4,7 +4,7 @@
   height: 43px;
   min-width: 975px;
   border-top: solid 5px #848484;
-
+  display: flex;
 }
 
 .artist-nav-bar {
@@ -20,6 +20,12 @@
   width: 85px;
   height: 20px;
   padding-right: 10px;
+}
+
+.artist-nav-logo.logged {
+  padding-left: 10px;
+  margin-left: -125px;
+  margin-right: 20px;
 }
 
 .artist-nav-logo img {
@@ -40,6 +46,46 @@
 .artist-nav-logo a {
   text-decoration: none;
 
+}
+
+.artist-nav-addalbum {
+  height: 43px;
+
+
+}
+
+.artist-nav-addalbum a {
+  padding-right: 10px;
+  padding-left: 10px;
+  color: #1DA0C3;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 43px;
+  height: 43px;
+  display: block;
+
+}
+
+.artist-nav-addalbum a:link {
+  color: #1DA0C3;
+  text-decoration: none;
+}
+
+.artist-nav-addalbum a:visited {
+  color: #1DA0C3;
+  text-decoration: none;
+}
+
+.artist-nav-addalbum a:hover {
+  background-color: #ded8d8;
+  color: #777272;
+  text-decoration: none;
+}
+
+.artist-nav-addalbum a:active {
+  background-color: #ded8d8;
+  color: white;
+  text-decoration: none;
 }
 
 .artist-nav-discover {
@@ -141,4 +187,85 @@
   color: #1DA0C3 !important;
   text-decoration: none;
 
+}
+
+.artist-nav-dropdown {
+  width: 159px;
+  height: 43px;
+  left: 735px;
+  position: relative;
+}
+
+.artist-nav-dropdown:hover {
+  background-color: #ded8d8;
+
+}
+
+
+
+.artist-nav-dropdown-link {
+  min-width: 139px;
+  height: 43px;
+  padding-left: 10px;
+  padding-right: 10px;
+  display: flex;
+}
+
+.artist-nav-dropdown a:link {
+   text-decoration: none;
+   color: #1DA0C3
+}
+
+.artist-nav-dropdown a:hover {
+   text-decoration: none;
+   color: #777272;
+
+}
+
+.artist-nav-dropdown a:active {
+  text-decoration: none;
+  color: white;
+}
+
+.artist-nav-dropdown a:visited {
+  text-decoration: none;
+}
+
+
+.artist-nav-dropdown-image {
+  height: 25px;
+  width: 25px;
+  padding: 1px;
+  margin-top: 8px;
+  margin-right: 10px;
+  border: 1px solid rgba(0,0,0,.2);
+}
+
+.artist-nav-dropdown-image img{
+  height: 25px;
+  width: 25px;
+
+}
+
+.artist-nav-dropdown-name {
+
+  height: 43px;
+  line-height: 43px;
+  font-weight: bold;
+  font-size: 13px;
+  max-width: 150px;
+}
+
+.artist-nav-dropdown-caret {
+  width: 9px;
+  height: 6px;
+  margin-top: 20px;
+  margin-left: 7px;
+
+}
+
+.dropdown-caret {
+  font-size: 11px;
+  position: relative;
+  bottom: 7px;
 }
