--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -7,6 +7,10 @@
   window.chris = "<%= asset_path('Chris-Speed.jpg')%>"
   window.charlie = "<%= asset_path('charlie-haden.jpg')%>"
   window.dewey = "<%= asset_path('Dewey-redman-sw2.jpg')%>"
+  window.sonny = "<%= asset_path('sonnyrollins.jpg')%>"
+  window.billie = "<%= asset_path('billie2.jpg')%>"
+  window.ben = "<%= asset_path('benweb.jpg')%>"
+  window.lester = "<%= asset_path('lester-billie.jpg')%>"
   window.bc = "<%= asset_path('bandcamp.png')%>"
   window.play = "<%= asset_path('play.jpg')%>"
   window.pause = "<%= asset_path('pause.jpg')%>"
