--- a/app/assets/stylesheets/player/player.css
+++ b/app/assets/stylesheets/player/player.css
@@ -15,6 +15,7 @@
   height: 52px;
   z-index: 3;
   border: 1px solid silver;
+  cursor: pointer;
 }
 
 .play > img {
@@ -24,6 +25,7 @@
   top: 16px;
   left: 18px;
   z-index: 2;
+  cursor: pointer;
 
 }
 
