--- a/app/assets/stylesheets/album/create_album.css
+++ b/app/assets/stylesheets/album/create_album.css
@@ -6,7 +6,7 @@
 .create-album-background {
   width: 975px;
   height: auto;
-  background-color: white;
+  background-color: #f5f5f5;
   margin: auto;
 }
 
